--- a/index.html
+++ b/index.html
@@ -32,13 +32,10 @@
   </nav>
 
   <div class="container">
-    <div class="jumbotron">
-      <h1>Navbar example</h1>
-      <p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
-      <p>To see the difference between static and fixed top navbars, just scroll.</p>
-      <p>
-        <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
-      </p>
+    <div class="row">
+      <section class="welcome col-sm-6 col-md-4 col-lg-2 col-xs-6">
+      </section>
+    </div>
     </div>
   </div> <!-- /container -->
 
