Add welcome image and scripture

--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
 
   <div class="container">
     <div class="row">
-      <section class="welcome col-sm-6 col-md-4 col-lg-2 col-xs-6">
+      <section class="welcome">
+        <!-- <blockquote> -->
+          <p>If any man be in Christ, he is a New Creation: old things are passed away; belold, all this are become new, 2 Co 5:17
+           </p>
+        <!-- </blockquote> -->
       </section>
     </div>
     </div>
