Add section-btn placeholders

--- a/index.html
+++ b/index.html
@@ -35,10 +35,21 @@
     <div class="row">
       <section class="welcome">
         <!-- <blockquote> -->
-          <p>If any man be in Christ, he is a New Creation: old things are passed away; belold, all this are become new, 2 Co 5:17
+          <p>If any man be in Christ, he is a New Creation: old things are passed away; behold, all this are become new, 2 Co 5:17
            </p>
         <!-- </blockquote> -->
       </section>
+    </div>
+    <div class="sections-display row">
+      <div class="section-btn col-sm-12 col-lg-4">
+        <p>Section 1</p>
+      </div>
+      <div class="section-btn col-sm-12 col-lg-4">
+        <p>Section 2</p>
+      </div>
+      <div class="section-btn col-sm-12 col-lg-4">
+        <p>Section 3</p>
+      </div>
     </div>
     </div>
   </div> <!-- /container -->
