--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">New Creation World Ministries</a>
+        <a class="navbar-brand" href="#">
+          <span id="brand-name">New Creation World<br>
+          <span id="brand-subname">Ministries</span>
+          </span>
+        </a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
@@ -31,28 +35,34 @@
     </div>
   </nav>
 
-  <div class="container">
+
+  <section id="welcome">
+    <blockquote>
+      <p>If any man be in Christ, he is a new creation: old things are passed away; behold, all things are made new. <br/> 1 Cor 5:17
+       </p>
+    </blockquote>
+  </section>
+  <section id="intro">
+    <p>
+      Revealing the greatness of God's glory to all nations of the world through the inspiration of Holy Spirit
+    </p>
+  </section>
+  <section class="container">
     <div class="row">
-      <section class="welcome">
-        <!-- <blockquote> -->
-          <p>If any man be in Christ, he is a New Creation: old things are passed away; behold, all this are become new, 2 Co 5:17
-           </p>
-        <!-- </blockquote> -->
-      </section>
-    </div>
-    <div class="sections-display row">
-      <div class="section-btn col-sm-12 col-lg-4">
-        <p>Section 1</p>
-      </div>
-      <div class="section-btn col-sm-12 col-lg-4">
-        <p>Section 2</p>
-      </div>
-      <div class="section-btn col-sm-12 col-lg-4">
-        <p>Section 3</p>
+      <div class="preview-section row">
+        <a id="services-preivew">
+          <img class="icon" src="images/icon-health.svg" alt="Icon">
+          <h3>Weekly Services</h3>
+          <p>The greatness of God's glory to all nations of the world through the inspiration of Holy Spirit</p>
+        </a>
+        <a id="directions-preivew">
+          <img class="icon" src="images/icon-health.svg" alt="Icon">
+          <h3>Directions</h3>
+          <p>The greatness of God's glory to all nations of the world through the inspiration of Holy Spirit</p>
+        </a>
       </div>
     </div>
-    </div>
-  </div> <!-- /container -->
+  </section> <!-- /container -->
 
 
   <!-- Bootstrap core JavaScript
