Add smooth scroll to when linking to sections

--- a/public/index.html
+++ b/public/index.html
@@ -47,22 +47,28 @@
       Revealing the greatness of God's glory to all nations of the world through the inspiration of Holy Spirit
     </p>
   </section>
-  <section class="container">
-    <div class="row">
-      <div class="preview-section row">
-        <a id="services-preivew">
-          <img class="icon" src="images/ic_church_white_36dp.png" alt="Icon">
-          <h3>Weekly Services</h3>
-          <p>Here we have some text that indroduces how services are run and bla bla placeholder text </p>
-        </a>
-        <a id="directions-preivew">
-          <img class="icon" src="images/ic_directions_fork_white_36dp.png" alt="Icon">
-          <h3>Directions</h3>
-          <p>Placeholder text about directions to church and this is just a placehoder text</p>
-        </a>
-      </div>
-    </div>
-  </section> <!-- /container -->
+
+  <section class="preview-section">
+    <a id="services-preivew" href="#services">
+      <img class="icon" src="images/ic_church_white_36dp.png" alt="Icon">
+      <h3>Weekly Services</h3>
+      <p>Here we have some text that indroduces how services are run and bla bla placeholder text </p>
+    </a>
+    <a id="directions-preivew" href="#directions">
+      <img class="icon" src="images/ic_directions_fork_white_36dp.png" alt="Icon">
+      <h3>Directions</h3>
+      <p>Placeholder text about directions to church and this is just a placehoder text</p>
+    </a>
+  </section>
+
+  <main>
+    <article id="services">
+      <h3>Weekly Services</h3>
+    </article>
+    <article id="directions">
+      <h3>Directions</h3>
+    </article>
+  </main>
 
 
   <!-- Bootstrap core JavaScript
