Start content for the main section

--- a/public/index.html
+++ b/public/index.html
@@ -61,9 +61,13 @@
     </a>
   </section>
 
-  <main>
+  <main id="home-main">
     <article id="services">
       <h3>Weekly Services</h3>
+      <img src="images/pastor.jpg" alt="">
+      <p>
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
+      </p>
     </article>
     <article id="directions">
       <h3>Directions</h3>
