--- a/public/index.html
+++ b/public/index.html
@@ -64,10 +64,20 @@
   <main id="home-main">
     <article id="services">
       <h3>Weekly Services</h3>
-      <img src="images/pastor.jpg" alt="">
-      <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
-      </p>
+      <img src="images/preacher.jpg" alt="">
+      <div id="service-times">
+        <h4>Main Service Times</h4>
+        <ul class="gt_list">
+          <li>Sundays — 8:00am, 9:30am &amp; 11:15am</li>
+          <li>Birth to 24 months — Nursery (Lower Level)</li>
+          <li>2 to 5 Year Olds — (Upper Level)</li>
+          <li>6 Years Old &amp; Up — West Fellowship Hall (Lower Level)</li>
+          <li>Wednesday — 6:30pm</li>
+          <li>Birth to 24 months — Nursery (Lower Level)</li>
+          <li>Girls Ministry (All Ages) — (Upper &amp; Lower Level)</li>
+          <li>Royal Rangers (All Ages) — (Upper Level)</li>
+        </ul>
+      </div>
     </article>
     <article id="directions">
       <h3>Directions</h3>
