Remove borders in service-times

--- a/public/index.html
+++ b/public/index.html
@@ -68,14 +68,11 @@
       <div id="service-times">
         <h4>Main Service Times</h4>
         <ul class="gt_list">
-          <li>Sundays — 8:00am, 9:30am &amp; 11:15am</li>
-          <li>Birth to 24 months — Nursery (Lower Level)</li>
-          <li>2 to 5 Year Olds — (Upper Level)</li>
-          <li>6 Years Old &amp; Up — West Fellowship Hall (Lower Level)</li>
+          <li>Sundays — 8:00am, 9:30am</li>
+          <li>Sunday school at...</li>
           <li>Wednesday — 6:30pm</li>
-          <li>Birth to 24 months — Nursery (Lower Level)</li>
-          <li>Girls Ministry (All Ages) — (Upper &amp; Lower Level)</li>
-          <li>Royal Rangers (All Ages) — (Upper Level)</li>
+          <li>Another placeholder text</li>
+          <li>Some text here and 11:23PM</li>
         </ul>
       </div>
     </article>
