Add directions placeholder text

--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,9 @@
     </article>
     <article id="directions">
       <h3>Directions</h3>
+      <p>
+        Placeholder text about directions to church, here we simply have some placehoder text
+      </p>
     </article>
   </main>
 
