--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
       <h3>Weekly Services</h3>
       <img src="images/preacher.jpg" alt="">
       <div id="service-times">
-        <h4>Main Service Times</h4>
+        <h4>- Main Service Times -</h4>
         <ul class="gt_list">
           <li>Sundays — 8:00am, 9:30am</li>
           <li>Sunday school at...</li>
