--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
   <main id="home-main">
     <article id="services">
       <h3>Weekly Services</h3>
-      <img src="images/preacher.jpg" alt="">
+      <img src="images/preacher_2.jpg" alt="">
       <div id="service-times">
         <h4>- Main Service Times -</h4>
         <ul class="gt_list">
@@ -79,11 +79,21 @@
     <article id="directions">
       <h3>Directions</h3>
       <p>
-        Placeholder text about directions to church, here we simply have some placehoder text
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. It has been the industry's standard dummy text
       </p>
     </article>
   </main>
 
+  <footer>
+    <small>Copyright © 2017</small>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </footer>
 
   <!-- Bootstrap core JavaScript
   ================================================== -->
